[package]
name = "nextcloud-passwords-client"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.112", features = ["derive"] }
thiserror = "1.0.20"
