[package]
name = "nextcloud-passwords-client"
version = "0.2.3"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/traxys/nextcloud-passwords-client/"
description = """
Bindings to the nextcloud passwords HTTP API
"""
categories = ["api-bindings"]
keywords = ["nextcloud", "passwords"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.1.1", features = ["serde"] }
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
thiserror = "1.0.20"
tokio = { version = "0.2.21", features = ["time", "rt-core"] }
log = "0.4.8"
uuid = { version = "0.8.1", features = ["serde"] }
serde_json = "1.0.55"
serde_repr = "0.1.6"
paste = "0.1.18"
doc-comment = "0.3.3"
hex = "0.4.2"
bytes = "0.5.4"
